# dewa-py

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: lint_format.yml
dewa/: __init__.py  write.py
dewa/synth/: base.py
dewa/synth/modifiers/: __init__.py  sine.py
examples/: a.py  ai.py
examples/modifiers/: bezier.py  echo.py  linear_ramp.py  sawtooth.py  sine.py  square.py  tremolo.py
examples/samples/: metal_pipe.opus
examples/untitled_song/: __init__.py
src/: _global.py  cli.py  main.py
src/dewa/: __init__.py  block.py  io.py  render.py  write.py
src/dewa/constants/: notes.py
src/dewa/modifier/: __init__.py  linear_ramp.py  sine.py  tremolo.py  triangle.py
src/dewa/modifiers/: __init__.py  amplitude.py  base.py  bezier.py  sawtooth.py  sine.py  square.py
src/dewa/synth/: __init__.py  block.py
src/dewa/synth/modifier/: __init__.py  base.py  echo.py  linear_ramp.py  ring_mod.py  sawtooth.py  sine.py  square.py  tremolo.py  triangle.py
src/dewa/utils/: __init__.py  units.py
src/synth/: base.py
