[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dewa-py"
version = "0.1.0"
authors = [
  { name="dvtzoe", email="ohmtzoe@gmail.com" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[project.scripts]
dewa = "src.cli:cli"

[tool.setuptools.packages]
find = {}

[dependency-groups]
dev = [
    "scipy-stubs>=1.16.1.1",
]
