[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "dewa-py"
version = "0.1.0"
authors = [
  { name="dvtzoe", email="ohmtzoe@gmail.com" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[tool.uv.build-backend]
module-name = "dewa"
module-root = ""

[dependency-groups]
dev = [
    "scipy-stubs>=1.16.1.1",
]
